test_scores/negative_dimers/features/Q53EZ4.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q53EZ4.pkl.xz